--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
-        applicationId "com.huangyihang.activity"
+        applicationId 'com.huangyihang.findhouse'
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
