--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:fullBackupContent="">
+        android:theme="@style/AppTheme">
+        <activity android:name=".HouseActivity"></activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity">
@@ -25,7 +24,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".ContentActivity" />
-        <activity android:name=".NewsActivity" />
     </application>
 
 </manifest>
