--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OrderViewActivity"></activity>
+        <activity android:name=".ReleasedActivity"></activity>
+        <activity android:name=".PublishActivity" />
+        <activity android:name=".OrderViewActivity" />
         <activity android:name=".OrderActivity" />
         <activity android:name=".NewHouseActivity" />
         <activity android:name=".HouseActivity" />
