--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StarViewActivity"></activity>
+        <activity android:name=".ManageActivity"></activity>
+        <activity android:name=".StarViewActivity" />
         <activity android:name=".ReleasedActivity" />
         <activity android:name=".PublishActivity" />
         <activity android:name=".OrderViewActivity" />
